[package]
name = "etscript-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.21"
bytemuck = "1.13"
libc = "0.2"
md-5 = "0.10"
rand = "0.8"
regex = "1.9"
rusqlite = { version = "0.29", features = ["bundled"] }
sha1 = "0.10"
sha2 = "0.10"
unicode-segmentation = "1.10"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
